--- a/spring-boots-redis/pom.xml
+++ b/spring-boots-redis/pom.xml
@@ -38,24 +38,25 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- 引入log4j2依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+
+
         <!-- 分页插件 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.7</version>
         </dependency>
-        <!-- alibaba的druid数据库连接池 支持Springboot2.X -->
+        <!-- alibaba的druid数据库连接池-->
 		<dependency>
-			<groupId>com.github.drtrang</groupId>
-			<artifactId>druid-spring-boot2-starter</artifactId>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
 			<version>1.1.10</version>
 		</dependency>
-		<dependency>
-			<groupId>com.github.drtrang</groupId>
-			<artifactId>druid-spring-boot2-actuator-starter</artifactId>
-			<version>1.1.10</version>
-		</dependency>
-
 
 		<!-- GSON json解析工具包 -->
 		<dependency>
@@ -63,6 +64,8 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
+
+
 
 
 
