--- a/spring-boots-redis/src/main/resources/application-dev.yml
+++ b/spring-boots-redis/src/main/resources/application-dev.yml
@@ -58,7 +58,7 @@ spring:
       poolPreparedStatements: true
       maxPoolPreparedStatementPerConnectionSize: 20
       # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-      filters: stat
+      filters: stat,wall,log4j2
       # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
       connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
       # 配置DruidStatFilter
@@ -70,7 +70,7 @@ spring:
       stat-view-servlet:
         url-pattern: "/druid/*"
         # IP白名单(没有配置或者为空，则允许所有访问,多个逗号隔开)
-        allow: 127.0.0.1
+        allow:
         # IP黑名单 (存在共同时，deny优先于allow)
         deny:
         #  禁用HTML页面上的“Reset All”功能
