--- a/spring-boots-base/src/main/resources/application-dev.yml
+++ b/spring-boots-base/src/main/resources/application-dev.yml
@@ -35,7 +35,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     # 填写你数据库的url、登录名、密码和数据库名
-    url: jdbc:mysql://localhost:3306/spring_boots_db?useSSL=false&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/spring_boots_db?useSSL=false&characterEncoding=utf8&serverTimezone=UTC
     username: root
     password: root
     druid:
