--- a/database-base/src/main/resources/application-dev.yml
+++ b/database-base/src/main/resources/application-dev.yml
@@ -7,9 +7,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     # 填写你数据库的url、登录名、密码和数据库名
-    url: jdbc:mysql://localhost:3306/spring_boots_db?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-    username: root
-    password: root
+    url: jdbc:mysql://10.10.200.203:3306/peiyou?useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&transformedBitIsBoolean=true&useSSL=false&serverTimezone=UTC&allowMultiQueries=true
+    username: education
+    password: lexue123
     druid:
       # 连接池的配置信息
       # 初始化大小，最小，最大
