--- a/database-base/src/main/resources/mybatis-generator/mybatisGeneratorinit.properties
+++ b/database-base/src/main/resources/mybatis-generator/mybatisGeneratorinit.properties
@@ -10,6 +10,6 @@ mapper_package=mapper
 
 #根据数据库中的表生成对应的pojo类、dao、mapper
 jdbc_driver =com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/spring_boots_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
-jdbc_user=root
-jdbc_password=root
+jdbc_url=jdbc:mysql://10.10.200.203:3306/peiyou?useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&transformedBitIsBoolean=true&useSSL=false&serverTimezone=UTC&allowMultiQueries=true
+jdbc_user=education
+jdbc_password=lexue123
