--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <modules>
         <module>spring-boots-redis</module>
+        <module>fang-common</module>
     </modules>
 
 
@@ -43,6 +44,12 @@
             </exclusions>
         </dependency>
 
+        <dependency> <!-- reids 支持 -->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -55,27 +62,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <!-- mybatis 自动生成代码工具 -->
-            <plugin>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.5</version>
-                <configuration>
-                    <!--允许移动生成的文件-->
-                    <verbose>true</verbose>
-                    <!--允许覆盖生成的文件-->
-                    <overwrite>true</overwrite>
-                </configuration>
-
-                <dependencies>
-                    <!-- 在pom中可以直接配置依赖的数据库 generatorConfig.xml就不需要再配置数据库的jar了 -->
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>5.1.25</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
 
