--- a/spring-boots-redis/pom.xml
+++ b/spring-boots-redis/pom.xml
@@ -14,10 +14,13 @@
 	<description>Demo project for Spring Boot</description>
 
 	<dependencies>
+
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<groupId>com.fangss.utils</groupId>
+			<artifactId>fang-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -65,11 +68,39 @@
 			<version>2.8.5</version>
 		</dependency>
 
-
-
-
-
 	</dependencies>
+
+
+	<build>
+		<plugins>
+			<!-- mybatis 自动生成代码工具 -->
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.5</version>
+				<configuration>
+					<!--允许移动生成的文件-->
+					<verbose>true</verbose>
+					<!--允许覆盖生成的文件-->
+					<overwrite>true</overwrite>
+				</configuration>
+
+				<dependencies>
+					<!-- 在pom中可以直接配置依赖的数据库 generatorConfig.xml就不需要再配置数据库的jar了 -->
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.25</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
+
+
+
+
+	</build>
+
 
 
 </project>
