--- a/spring-boots-redis/pom.xml
+++ b/spring-boots-redis/pom.xml
@@ -68,6 +68,14 @@
 			<version>2.8.5</version>
 		</dependency>
 
+		<!-- 方杉杉 jar 工具包-->
+		<dependency>
+			<groupId>com.fangss.utils</groupId>
+			<artifactId>fang-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
 	</dependencies>
 
 
